force-app/main/objects/Courses__c.object
<CustomObject>
    <description>Area to keep list of all course types, codes, costs and venues</description>
    <fields>
        <fullName>Additional_Information_2__c</fullName>
        <label>Additional Information 2</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Information__c</fullName>
        <label>Additional Information</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AutomationBypassDateTime__c</fullName>
        <label>AutomationBypassDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Bespoke_Course_Materials__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bespoke Course Materials?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bespoke_Material_Notes__c</fullName>
        <description>If materials other than standard are to be used please add full details here</description>
        <inlineHelpText>If materials other than standard are to be used please add full details here</inlineHelpText>
        <label>Bespoke Material Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Billing_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Courses (In Company Billing Contact)</relationshipLabel>
        <relationshipName>Courses1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CPD_CEU_Points__c</fullName>
        <description>Professional development points to include in the Course certificates</description>
        <inlineHelpText>Professional development points to include in the Course certificates</inlineHelpText>
        <label>CPD/CEU Points</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Catering_Booked__c</fullName>
        <label>Catering Booked</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Completion_Survey_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created for Qualtrics and is being used in Outbound message.</description>
        <label>Instructor Survey Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Consignment_Note_Tracking_Number__c</fullName>
        <inlineHelpText>Distribution to complete</inlineHelpText>
        <label>Consignment Note Tracking Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Courier__c</fullName>
        <label>Courier</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Course_BU__c</fullName>
        <description>Business Unit which the course relates to</description>
        <inlineHelpText>Where the course is run</inlineHelpText>
        <label>Course Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Abu Dhabi</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Czech Republic</fullName>
                </value>
                <value>
                    <fullName>Denmark</fullName>
                </value>
                <value>
                    <fullName>Egypt</fullName>
                </value>
                <value>
                    <fullName>Finland</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>Greece</fullName>
                </value>
                <value>
                    <fullName>Hong Kong</fullName>
                </value>
                <value>
                    <fullName>Hungary</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Indonesia</fullName>
                </value>
                <value>
                    <fullName>Ireland</fullName>
                </value>
                <value>
                    <fullName>Italy</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Kenya</fullName>
                </value>
                <value>
                    <fullName>Kuwait</fullName>
                </value>
                <value>
                    <fullName>Luxembourg</fullName>
                </value>
                <value>
                    <fullName>Malaysia</fullName>
                </value>
                <value>
                    <fullName>Mexico</fullName>
                </value>
                <value>
                    <fullName>Morocco</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Course_Category__c</fullName>
        <description>Course category to identify internal, public, partner or in company.</description>
        <label>Course Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Public</fullName>
                    <default>true</default>
                    <label>Public</label>
                </value>
                <value>
                    <fullName>In Company</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Course_Confirmed_Total__c</fullName>
        <description>Roll up summary field for Confirmed Bookings</description>
        <label>Confirmed Total</label>
        <summaryFilterItems>
            <field>Course_Booking__c.Booking_Status__c</field>
            <operation>equals</operation>
            <value>Confirmed, Ready to be confirmed</value>
        </summaryFilterItems>
        <summaryForeignKey>Course_Booking__c.Course_Number__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Course_Credit_IM_Code__c</fullName>
        <description>Lookup for IM code to copy to Sun</description>
        <label>Course Credit IM Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Course_Description__c</fullName>
        <description>Full name of the course which can be translated and appears on templates.</description>
        <label>Course Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Director_Folder_Returned__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Course Director Folder Returned</description>
        <label>Evaluation Forms Returned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Course_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Course Director</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Courses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Course_DurationOld__c</fullName>
        <description>Duration between Course Start and Course End date in terms of Working Days
JM 15/2/08 - renamed for new duration field with automatic calculations removed.</description>
        <formula>IF(MOD(   Course_Start_Date__c   - DATE(1900, 1, 7), 7)&gt; MOD(    Course_End_Date__c  - DATE(1900, 1, 7), 7),(((  Course_End_Date__c  -   Course_Start_Date__c  )-(2 * FLOOR((  Course_End_Date__c   -   Course_Start_Date__c )/7))-2)+1),(((  Course_End_Date__c   -    Course_Start_Date__c   )-(2 * FLOOR(( Course_End_Date__c   -   Course_Start_Date__c )/7))))+1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DurationOld</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Course_End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Course_Free_Spaces__c</fullName>
        <description>Calculated field to get the free/available spaces for a Course.</description>
        <formula>Maximum_Delegates__c -( Course_Provisional_Total__c + Course_Confirmed_Total__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Free Spaces</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Course_Name__c</fullName>
        <label>Course Name</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Course_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>360</fullName>
                </value>
                <value>
                    <fullName>360 Feedback half day</fullName>
                </value>
                <value>
                    <fullName>A&amp;DC</fullName>
                </value>
                <value>
                    <fullName>ADVC</fullName>
                </value>
                <value>
                    <fullName>ADVTS</fullName>
                </value>
                <value>
                    <fullName>ASST</fullName>
                </value>
                <value>
                    <fullName>BESPOKE</fullName>
                </value>
                <value>
                    <fullName>BPOA</fullName>
                </value>
                <value>
                    <fullName>BS</fullName>
                </value>
                <value>
                    <fullName>CBI</fullName>
                </value>
                <value>
                    <fullName>CBI Train the Trainer</fullName>
                </value>
                <value>
                    <fullName>CF</fullName>
                </value>
                <value>
                    <fullName>Coaching Essentials</fullName>
                </value>
                <value>
                    <fullName>COMBO</fullName>
                </value>
                <value>
                    <fullName>COMPD</fullName>
                </value>
                <value>
                    <fullName>CORESELL</fullName>
                </value>
                <value>
                    <fullName>Creating IDP’s</fullName>
                </value>
                <value>
                    <fullName>CUSTSV</fullName>
                </value>
                <value>
                    <fullName>Dev High Perf Teams</fullName>
                </value>
                <value>
                    <fullName>Diversity and Disability Confidence in Assessment</fullName>
                </value>
                <value>
                    <fullName>Effective Succession Plans</fullName>
                </value>
                <value>
                    <fullName>Employee Motivation</fullName>
                </value>
                <value>
                    <fullName>Enhancing Workforce Performance</fullName>
                </value>
                <value>
                    <fullName>Exec Leadership</fullName>
                </value>
                <value>
                    <fullName>FC</fullName>
                </value>
                <value>
                    <fullName>GS</fullName>
                </value>
                <value>
                    <fullName>HR Pioneer Series</fullName>
                </value>
                <value>
                    <fullName>Implementing and Facilitating a robust 360 Feedback process</fullName>
                </value>
                <value>
                    <fullName>Interviewing Techniques</fullName>
                </value>
                <value>
                    <fullName>LAMP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Course_Name_on_Certificate__c</fullName>
        <description>Course Name to add to Course Certificates</description>
        <label>Course Name on Certificate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Partner_Logo__c</fullName>
        <formula>IF(Partner_Logo_Content_Version_ID__c != &apos;&apos;,IMAGE(&apos;/sfc/servlet.shepherd/version/download/&apos;&amp;Partner_Logo_Content_Version_ID__c,&quot;Partner Logo&quot;, -150, 150) ,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Certificate Logo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Price__c</fullName>
        <inlineHelpText>Prices are now fixed in Sun based on agreed price.</inlineHelpText>
        <label>Public Course Price</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Course_Provisional_Total__c</fullName>
        <description>Roll Up summary field for Provisional Bookings</description>
        <label>Provisional Total</label>
        <summaryFilterItems>
            <field>Course_Booking__c.Booking_Status__c</field>
            <operation>equals</operation>
            <value>Provisional</value>
        </summaryFilterItems>
        <summaryForeignKey>Course_Booking__c.Course_Number__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Course_Residential_Price__c</fullName>
        <description>Price of course including residence but not extra night</description>
        <label>Course Residential Price</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Course_Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Course_Status__c</fullName>
        <label>Course Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Provisional</fullName>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Completed (assumed)</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Cancelled - to be rebooked</fullName>
                </value>
                <value>
                    <fullName>Cancelled - to be credited</fullName>
                </value>
                <value>
                    <fullName>Cancelled - chargeable</fullName>
                </value>
                <value>
                    <fullName>Cancelled -  scheduling</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Course_Timings__c</fullName>
        <label>Course Timings</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Course_Transferred_From__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Course Transferred From</label>
        <referenceTo>Courses__c</referenceTo>
        <relationshipLabel>Courses</relationshipLabel>
        <relationshipName>Courses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Course_Transferred_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Course Transferred To</label>
        <referenceTo>Courses__c</referenceTo>
        <relationshipLabel>Courses (Course Transferred To)</relationshipLabel>
        <relationshipName>Courses1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Course_Type__c</fullName>
        <label>Course Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ability</fullName>
                </value>
                <value>
                    <fullName>Personality</fullName>
                </value>
                <value>
                    <fullName>Ability/Personality</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Job Profiling</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>System Training</fullName>
                </value>
                <value>
                    <fullName>System Demo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Course_Venue__c</fullName>
        <label>Course Venue</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Course_BU__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Adelaide</fullName>
                </value>
                <value>
                    <fullName>Amersfoort</fullName>
                </value>
                <value>
                    <fullName>Atlanta</fullName>
                </value>
                <value>
                    <fullName>Auckland</fullName>
                </value>
                <value>
                    <fullName>Bangalore</fullName>
                </value>
                <value>
                    <fullName>Barony Castle, Scotland</fullName>
                </value>
                <value>
                    <fullName>Beaumont Estate, Berkshire</fullName>
                </value>
                <value>
                    <fullName>Beijing</fullName>
                </value>
                <value>
                    <fullName>Boulder, Colorado</fullName>
                </value>
                <value>
                    <fullName>Brisbane</fullName>
                </value>
                <value>
                    <fullName>Bristol</fullName>
                </value>
                <value>
                    <fullName>Brussels</fullName>
                </value>
                <value>
                    <fullName>Cairo</fullName>
                </value>
                <value>
                    <fullName>Camden Court, Dublin</fullName>
                </value>
                <value>
                    <fullName>Canary Wharf, London</fullName>
                </value>
                <value>
                    <fullName>Canberra</fullName>
                </value>
                <value>
                    <fullName>Cape Town</fullName>
                </value>
                <value>
                    <fullName>Caracas, Venezuela</fullName>
                </value>
                <value>
                    <fullName>CEO Suites KL</fullName>
                </value>
                <value>
                    <fullName>Cheadle House, Cheshire</fullName>
                </value>
                <value>
                    <fullName>Chennai</fullName>
                </value>
                <value>
                    <fullName>Cheshire</fullName>
                </value>
                <value>
                    <fullName>Chicago, Illinois</fullName>
                </value>
                <value>
                    <fullName>Christchurch</fullName>
                </value>
                <value>
                    <fullName>Client Site</fullName>
                </value>
                <value>
                    <fullName>Clifton’s Singapore</fullName>
                </value>
                <value>
                    <fullName>Colmore Gate, Birmingham</fullName>
                </value>
                <value>
                    <fullName>Concorde Hotel Kuala Lumpur</fullName>
                </value>
                <value>
                    <fullName>Copenhagen</fullName>
                </value>
                <value>
                    <fullName>Cotswold, Gloucestershire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Course_Waiting_Total__c</fullName>
        <description>Roll Up summary field for Waiting Bookings</description>
        <label>Waiting Total</label>
        <summaryFilterItems>
            <field>Course_Booking__c.Booking_Status__c</field>
            <operation>equals</operation>
            <value>Waiting</value>
        </summaryFilterItems>
        <summaryForeignKey>Course_Booking__c.Course_Number__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Credit_Amount__c</fullName>
        <label>Credit Amount</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_Date__c</fullName>
        <label>Credit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Credit_Note_Notes__c</fullName>
        <inlineHelpText>For SSC use</inlineHelpText>
        <label>Credit Note Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Credit_Reason__c</fullName>
        <label>Credit Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>S04 - Client Order Error</fullName>
                </value>
                <value>
                    <fullName>S05 - SOE Operator Error</fullName>
                </value>
                <value>
                    <fullName>S07 - Client Cancelled Training</fullName>
                </value>
                <value>
                    <fullName>S08 - SHL Cancelled Course</fullName>
                </value>
                <value>
                    <fullName>S09 - Goodwill Gesture</fullName>
                </value>
                <value>
                    <fullName>S11 - System Error</fullName>
                </value>
                <value>
                    <fullName>S12 - Requestor Error</fullName>
                </value>
                <value>
                    <fullName>S14 - Training Operator Error</fullName>
                </value>
                <value>
                    <fullName>S13 - Client Support Operator Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credit_Status__c</fullName>
        <label>Credit Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ready to be credited</fullName>
                </value>
                <value>
                    <fullName>Queried</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Completed via order</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credit_Text_Description__c</fullName>
        <label>Credit Text Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cross_Border_BU__c</fullName>
        <label>Cross Border BU</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Abu Dhabi - AD1</fullName>
                </value>
                <value>
                    <fullName>Australia - AU1</fullName>
                </value>
                <value>
                    <fullName>Belgium SPS - BE5</fullName>
                </value>
                <value>
                    <fullName>Canada - CA1</fullName>
                </value>
                <value>
                    <fullName>China - CN1</fullName>
                </value>
                <value>
                    <fullName>Denmark - DK1</fullName>
                </value>
                <value>
                    <fullName>EU Region - E50</fullName>
                </value>
                <value>
                    <fullName>Finland - FI1</fullName>
                </value>
                <value>
                    <fullName>France - FR1</fullName>
                </value>
                <value>
                    <fullName>France SPS - FR5</fullName>
                </value>
                <value>
                    <fullName>Germany SPS - DE5</fullName>
                </value>
                <value>
                    <fullName>Hong Kong - HK1</fullName>
                </value>
                <value>
                    <fullName>India - IN1</fullName>
                </value>
                <value>
                    <fullName>Italy - IT1</fullName>
                </value>
                <value>
                    <fullName>Middle East - ME1</fullName>
                </value>
                <value>
                    <fullName>Netherlands SPS - NL5</fullName>
                </value>
                <value>
                    <fullName>New Zealand - NZ1</fullName>
                </value>
                <value>
                    <fullName>Norway - NO1</fullName>
                </value>
                <value>
                    <fullName>Philippines - PH1</fullName>
                </value>
                <value>
                    <fullName>Poland - PL1</fullName>
                </value>
                <value>
                    <fullName>Saudi Arabia - SA5</fullName>
                </value>
                <value>
                    <fullName>SHL Previsor - P10</fullName>
                </value>
                <value>
                    <fullName>Singapore - SG1</fullName>
                </value>
                <value>
                    <fullName>South Africa - ZA1</fullName>
                </value>
                <value>
                    <fullName>Spain - ES1</fullName>
                </value>
                <value>
                    <fullName>Sweden - SE1</fullName>
                </value>
                <value>
                    <fullName>Switzerland - CH1</fullName>
                </value>
                <value>
                    <fullName>UK - UK1</fullName>
                </value>
                <value>
                    <fullName>US - US5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cross_Border_Invoice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cross Border Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Currency_to_Invoice__c</fullName>
        <label>Currency to Invoice</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AED</fullName>
                </value>
                <value>
                    <fullName>AUD</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>CHF</fullName>
                </value>
                <value>
                    <fullName>CNY</fullName>
                </value>
                <value>
                    <fullName>DKK</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>HKD</fullName>
                </value>
                <value>
                    <fullName>INR</fullName>
                </value>
                <value>
                    <fullName>NOK</fullName>
                </value>
                <value>
                    <fullName>NZD</fullName>
                </value>
                <value>
                    <fullName>SEK</fullName>
                </value>
                <value>
                    <fullName>SGD</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
                <value>
                    <fullName>ZAR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Order_Ref__c</fullName>
        <label>Customer Order Ref</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_No__c</fullName>
        <formula>Partner_Account_Name__r.Account_Number__c</formula>
        <label>D-No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_Number__c</fullName>
        <label>D Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Course_Invoiced__c</fullName>
        <description>Date the whole course invoice was raised</description>
        <label>Date Course Invoiced</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Expenses_Invoiced__c</fullName>
        <label>Date Expenses Invoiced</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_JI_First_Sent__c</fullName>
        <label>Date JI first sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Materials_Despatched__c</fullName>
        <inlineHelpText>Distribution to complete</inlineHelpText>
        <label>Date Materials Despatched</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Survey_first_sent__c</fullName>
        <label>Instructor Survey Sent On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deferral_Month__c</fullName>
        <label>Deferral Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivery_Contact_Email__c</fullName>
        <label>Delivery Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Delivery_Contact_Name__c</fullName>
        <label>Delivery Contact Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Contact_Phone__c</fullName>
        <label>Delivery Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Delivery_Language__c</fullName>
        <label>Delivery Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                    <default>true</default>
                    <label>English</label>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>Chinese (Mandarin/Simplified)</fullName>
                </value>
                <value>
                    <fullName>Chinese (Cantonese/Traditional)</fullName>
                </value>
                <value>
                    <fullName>Dutch</fullName>
                </value>
                <value>
                    <fullName>Brazilian Portuguese</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Danish</fullName>
                </value>
                <value>
                    <fullName>Finnish</fullName>
                </value>
                <value>
                    <fullName>Norwegian</fullName>
                </value>
                <value>
                    <fullName>Swedish</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delivery_Mode__c</fullName>
        <label>Delivery Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Face to Face</fullName>
                </value>
                <value>
                    <fullName>Online</fullName>
                </value>
                <value>
                    <fullName>Blended</fullName>
                </value>
                <value>
                    <fullName>Webinar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>